syntax = "proto3";

option java_multiple_files = true;
option java_package = "scouter2.proto";
option java_outer_classname = "MetricProto";

package scouter2.proto;

import "common.proto";

service MetricServiceP {
  rpc addMeasure (stream MetricP) returns (CountingP) {}
}

message MetricP {
  int64 timestamp = 1;
  string objFullName = 2;
  MetricTypeP metricType = 3;
  TimeTypeP timeType = 4;
  map<string, double> metrics = 5;
}

message Metric4RepoP {
  int64 timestamp = 1;
  int64 objId = 2;
  MetricTypeP metricType = 3;
  TimeTypeP timeType = 4;
  map<int64, double> metrics = 5;
}
